styles/home.less
/**
 * Styles specific to the homepage, outside of the topic styles
 */

#home-top {
    padding: 1em 0;
    background-color: #2c4561;
    color: #fff;
}

#home-bottom {
    background: #fff7d8 url(/assets/watermark.jpg) no-repeat scroll right bottom;
}

#home-services {
    background-color: #f6efcb;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
}

#home-services blockquote {
    color: #a44339;
    padding: 0;
    border: none;
    font-size: 1.25em;
}

#home-big-links .home-big-link {
    background-color: #dbc8a4;
    border-bottom: 0.125em solid #f6efcb;
}

#home-big-links .home-big-link.last {
    border-bottom: none;
}

#home-big-links .home-big-link .image {
    padding-right: 0;
}

#home-big-links .home-big-link a,
#home-big-links .home-big-link a:hover {
    color: #000;
}

#home-big-links .home-big-link a h3 {
    margin-top: 0.75em;
    font-size: 1.325em;
    line-height: 1em;
    font-weight: bold;
    text-transform: uppercase;
}

.focus {
    font-style: italic;
}

.focus .columns {
    padding-top: 2em;
    padding-left: 1.5em;
}

.focus .columns p span {
    font-size: 1.25em;
}

#top-footer {
    background-color: #49545f;
    text-align: center;
    color: #fff;
    text-shadow: 0.025em 0.025em 0.125em #000;
}

#top-footer .columns {
    padding: 1em;
}

#top-footer .columns .tagline {
    margin-bottom: 0;
}

#top-footer h5 {
    color: #fce5c0;
    font-weight: bold;
}

